modified Path as generic and fix the step duplications issue